fix: potential fix for image overflow in safari

--- a/public/car/style.css
+++ b/public/car/style.css
@@ -249,6 +249,7 @@ header p {
 
 .car-image {
   width: 100%;
+  height: 100%;
 }
 
 .car-list-data {
